--- a/frontend/app/src/main/res/layout/activity_login.xml
+++ b/frontend/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:hint="@string/prompt_first_name"
-        android:inputType="textEmailAddress"
+        android:inputType="textPersonName"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
         android:hint="@string/prompt_last_name"
         android:imeActionLabel="@string/action_register_short"
         android:imeOptions="actionDone"
-        android:inputType="textPassword"
+        android:inputType="textPersonName"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
         android:hint="@string/prompt_email"
         android:imeActionLabel="@string/action_register_short"
         android:imeOptions="actionDone"
-        android:inputType="textPassword"
+        android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
         android:hint="@string/prompt_wallet_address"
         android:imeActionLabel="@string/action_register_short"
         android:imeOptions="actionDone"
-        android:inputType="textPassword"
+        android:inputType="textPersonName"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
