--- a/frontend/app/src/main/res/layout/fragment_settings.xml
+++ b/frontend/app/src/main/res/layout/fragment_settings.xml
@@ -19,4 +19,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/my_profile_button"
+        android:layout_width="224dp"
+        android:layout_height="97dp"
+        android:text="My Profile"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_settings" />
 </androidx.constraintlayout.widget.ConstraintLayout>
