--- a/frontend/app/src/main/res/layout/fragment_home.xml
+++ b/frontend/app/src/main/res/layout/fragment_home.xml
@@ -44,6 +44,7 @@
 
 
         <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/home_chart"
             android:layout_width="match_parent"
             android:layout_height="271dp">
 
