Added features for changing graph view using dropdown menu inside home page
TODO:
- Allow better graph views for each option
- Incorporate into profile pages

--- a/frontend/app/src/main/res/layout/fragment_home.xml
+++ b/frontend/app/src/main/res/layout/fragment_home.xml
@@ -16,19 +16,12 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <!--TODO: implement this using steps given in: https://material.io/components/menus/android#exposed-dropdown-menus-->
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/menu"
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+        <Spinner
+            android:id="@+id/home_graph_options"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/label">
+            android:layout_height="48dp"
+            android:layout_weight="1" />
 
-            <AutoCompleteTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="none" />
-
-        </com.google.android.material.textfield.TextInputLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
