--- a/frontend/app/src/main/res/layout/activity_wallet_profile.xml
+++ b/frontend/app/src/main/res/layout/activity_wallet_profile.xml
@@ -11,7 +11,7 @@
         android:layout_width="161dp"
         android:layout_height="141dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/wallet_address"
+        app:layout_constraintBottom_toTopOf="@+id/wallet_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,7 +19,7 @@
         tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/wallet_address"
+        android:id="@+id/wallet_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="180dp"
