--- a/frontend/app/src/main/res/layout/fragment_home.xml
+++ b/frontend/app/src/main/res/layout/fragment_home.xml
@@ -40,13 +40,14 @@
         android:layout_marginTop="72dp"
         android:text="Current Value"
         android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/wallet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.366" />
+        app:layout_constraintVertical_bias="0.744" />
 
     <TextView
         android:id="@+id/currentvalue"
@@ -54,10 +55,11 @@
         android:layout_height="51dp"
         android:text="Current Value"
         android:textAlignment="center"
-        android:textSize="28sp"
+        android:textSize="12sp"
+        app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="@+id/latest_value"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.894"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/latest_value"
         app:layout_constraintTop_toTopOf="@+id/latest_value"
         app:layout_constraintVertical_bias="1.0" />
