--- a/frontend/app/src/main/res/layout/activity_chat.xml
+++ b/frontend/app/src/main/res/layout/activity_chat.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".ui.social.ChatActivity">
+
+
+<androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.social.ChatActivity">
+    android:id="@+id/RecyclerView"
+    android:layout_above="@id/messageEdit"/>
 
+<EditText
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/edittext_design"
+    android:padding="8dp"
+    android:hint="Message..."
+    android:textSize="16sp"
+    android:layout_toStartOf="@id/sendBtn"
+    android:layout_alignParentBottom="true"
+    android:layout_marginStart="16dp"
+    android:layout_marginBottom="16dp"
+    android:id="@+id/messageEdit" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerView"
-        android:layout_above="@id/messageEdit"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/edittext_design"
-        android:padding="8dp"
-        android:hint="Message..."
-        android:textSize="16sp"
-        android:layout_toStartOf="@id/sendBtn"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
-        android:id="@+id/messageEdit" />
-
-    <TextView
+    <Button
         android:id="@+id/sendBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
