--- a/frontend/app/src/main/res/layout/activity_search_results.xml
+++ b/frontend/app/src/main/res/layout/activity_search_results.xml
@@ -6,6 +6,7 @@ https://stackoverflow.com/questions/60478873/make-a-leaderboard-using-a-listview
 -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/search_activity"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,6 +15,10 @@ https://stackoverflow.com/questions/60478873/make-a-leaderboard-using-a-listview
     <androidx.core.widget.NestedScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:context=".SearchResultsActivity">
 
         <LinearLayout
