--- a/frontend/app/src/main/res/layout/fragment_home.xml
+++ b/frontend/app/src/main/res/layout/fragment_home.xml
@@ -16,20 +16,19 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.361"
+        app:layout_constraintVertical_bias="0.316"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/home_chart"
         android:layout_width="match_parent"
         android:layout_height="271dp"
-        android:layout_marginBottom="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_graph_options"
-        app:layout_constraintVertical_bias="0.243">
+        app:layout_constraintVertical_bias="0.331">
 
     </com.github.mikephil.charting.charts.LineChart>
 
@@ -47,7 +46,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.744" />
+        app:layout_constraintVertical_bias="0.109" />
 
     <TextView
         android:id="@+id/currentvalue"
@@ -62,7 +61,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/latest_value"
         app:layout_constraintTop_toTopOf="@+id/latest_value"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/wallet"
@@ -75,15 +74,30 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/home_graph_options"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
+        android:id="@+id/recommendation"
+        android:layout_width="409dp"
+        android:layout_height="46dp"
+        android:text="@string/ai_recomendation"
+        android:textColor="@color/red"
+        android:textAlignment="center"
+        android:textSize="16sp"
+
+        app:layout_constraintBottom_toTopOf="@+id/home_chart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_graph_options" />
+
+    <TextView
         android:id="@+id/user"
         android:layout_width="408dp"
         android:layout_height="64dp"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="130dp"
         android:text="@string/profile_name"
         android:textAlignment="center"
@@ -92,6 +106,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
