--- a/frontend/app/src/main/res/layout/fragment_home.xml
+++ b/frontend/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/home_frag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment">
@@ -16,7 +17,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.316"
+        app:layout_constraintVertical_bias="0.344"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <com.github.mikephil.charting.charts.LineChart
@@ -28,7 +29,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_graph_options"
-        app:layout_constraintVertical_bias="0.331">
+        app:layout_constraintVertical_bias="0.333">
 
     </com.github.mikephil.charting.charts.LineChart>
 
@@ -37,16 +38,16 @@
         android:layout_width="196dp"
         android:layout_height="51dp"
         android:layout_marginTop="72dp"
-        android:text="Current Value"
+        android:text="Current wallet value"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="28sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/wallet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.109" />
+        app:layout_constraintVertical_bias="0.744" />
 
     <TextView
         android:id="@+id/currentvalue"
@@ -61,7 +62,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/latest_value"
         app:layout_constraintTop_toTopOf="@+id/latest_value"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/wallet"
@@ -74,30 +75,15 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/home_graph_options"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/recommendation"
-        android:layout_width="409dp"
-        android:layout_height="46dp"
-        android:text="@string/ai_recomendation"
-        android:textColor="@color/red"
-        android:textAlignment="center"
-        android:textSize="16sp"
-
-        app:layout_constraintBottom_toTopOf="@+id/home_chart"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_graph_options" />
-
-    <TextView
         android:id="@+id/user"
         android:layout_width="408dp"
         android:layout_height="64dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="130dp"
         android:text="@string/profile_name"
         android:textAlignment="center"
@@ -106,7 +92,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/ai_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/ai_button"
+        app:layout_constraintBottom_toTopOf="@+id/home_chart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_graph_options" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
