--- a/frontend/app/src/main/res/layout/fragment_social.xml
+++ b/frontend/app/src/main/res/layout/fragment_social.xml
@@ -1,53 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- -
+This code is taken from and adapted from (this includes relevant .xml files):
+https://stackoverflow.com/questions/34518421/adding-a-scoreboard-to-an-android-studio-application
+https://stackoverflow.com/questions/60478873/make-a-leaderboard-using-a-listview
+-->
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/leaderboard_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.social.ChatActivity">
+    tools:context=".ui.search.SearchFragment">
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recyclerView"
-        android:layout_above="@id/messageEdit"/>
-
-    <EditText
-        android:layout_width="match_parent"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/edittext_design"
-        android:padding="8dp"
-        android:hint="Message..."
-        android:textSize="16sp"
-        android:layout_toStartOf="@id/sendBtn"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
-        android:id="@+id/messageEdit" />
+        tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/sendBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
-        android:padding="10dp"
-        android:text="Send"
-        android:textColor="@color/colorPrimary" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            tools:context=".social">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.38">
 
-<!--    <ImageView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:src="@drawable/ic_image_black_24dp"-->
-<!--        android:tint="@color/colorPrimary"-->
-<!--        android:padding="8dp"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_toEndOf="@id/messageEdit"-->
-<!--        android:layout_marginBottom="16dp"-->
-<!--        android:id="@+id/pickImgBtn"-->
-<!--        android:layout_alignParentEnd="true"/>-->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Social"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="50dp"
+                    android:textStyle="bold">
 
-</RelativeLayout>
+                </TextView>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.38">
+
+            </RelativeLayout>
+
+            <ListView
+                android:id="@+id/list"
+                android:layout_width="wrap_content"
+                android:layout_height="668dp"
+                android:layout_weight="1.0">
+
+            </ListView>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
