API callers fixing
Some chat QoL updates

--- a/frontend/app/src/main/res/layout/social_row.xml
+++ b/frontend/app/src/main/res/layout/social_row.xml
@@ -15,8 +15,8 @@ https://stackoverflow.com/questions/60478873/make-a-leaderboard-using-a-listview
 
     <TextView
         android:id="@+id/social_friend_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="16dp"
         android:textSize="14dp" />
