--- a/frontend/app/src/main/res/layout/item_sent_message.xml
+++ b/frontend/app/src/main/res/layout/item_sent_message.xml
@@ -4,16 +4,17 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/sentTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
-        android:layout_marginStart="64dp"
-        android:padding="8dp"
-        android:id="@+id/sentTxt"
-        android:textSize="16sp"
         android:background="#cccccc"
-        android:text="Hello this is a sample message" />
+        android:clickable="false"
+        android:padding="8dp"
+        android:text="Hello this is a sample message"
+        android:textSize="16sp" />
 
 </RelativeLayout>
