--- a/frontend/app/src/main/res/layout/fragment_social.xml
+++ b/frontend/app/src/main/res/layout/fragment_social.xml
@@ -7,7 +7,7 @@ https://stackoverflow.com/questions/60478873/make-a-leaderboard-using-a-listview
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/leaderboard_layout"
+    android:id="@+id/social_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.search.SearchFragment">
